Miscellaneous changes from FindBugs analysis
git-svn-id: http://zxing.googlecode.com/svn/trunk@1038 59b500cc-1b3d-0410-9834-0bbf25fbcc57